--- a/About-us.html
+++ b/About-us.html
@@ -278,8 +278,8 @@
                 <div>
                     <h2 class="mb-5" style="color: #0B5355;">CHAIRMAN  MESSAGE</h2>
                     <div class="d-flex">
-                        <img src="images/quot.png" width="40px" height="30px" alt="icon">
-                        <p class="pt-4 pe-4">Sed viverra lectus vitae pellentesque egestas. Donec at pretium nisl. Nulla aliquet vestibulum risus, id feugiat nibh consectetur in. Mauris cursus tincidunt fringilla. Mauris semper neque eget est tempor tempus sed eget ex. Integer lectus arcu, bibendum vitae scelerisque blandit, sodales rutrum neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras leo diam, condimentum vel ullamcorper quis, bibendum nec augue. Praesent at ullamcorper libero, vel interdum urna. Maecenas eu rhoncus leo. Duis eget mollis purus. Ut dictum semper accumsan.</p>
+                        <img src="images/quot.png" width="38px" height="30px" alt="icon">
+                        <p class="pt-4 ps-3 pe-4" style="font-size: 17px;">Sed viverra lectus vitae pellentesque egestas. Donec at pretium nisl. Nulla aliquet vestibulum risus, id feugiat nibh consectetur in. Mauris cursus tincidunt fringilla. Mauris semper neque eget est tempor tempus sed eget ex. Integer lectus arcu, bibendum vitae scelerisque blandit, sodales rutrum neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras leo diam, condimentum vel ullamcorper quis, bibendum nec augue. Praesent at ullamcorper libero, vel interdum urna. Maecenas eu rhoncus leo. Duis eget mollis purus. Ut dictum semper accumsan.</p>
                     </div>
                 </div>
             </div>
@@ -506,17 +506,17 @@
     <!-- contact -->
     <div class="container expHolder mt-5">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-7">
                 <div class="exp-content">
                     <h2 class="mb-3">Experience That <br> Sets Us Apart</h2>
-                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum rhoncus odio. Duis ut sem a ipsum ultrices consectetur ut quis dui. Maecenas id lacus mollis:</p>
+                    <p class="mb-5" style="font-size: 18px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum rhoncus odio. Duis ut sem a ipsum ultrices consectetur ut quis dui. Maecenas id lacus mollis:</p>
                     <div>
                         <button class="lang-btn"><a href="contact-us.html">Contact us</a></button>
                     </div>
                 </div>
             </div>
 
-            <div class="col-md-6 me-0">
+            <div class="col-md-5 me-0">
                 <div>
                     <img src="images/Group 48.png" class="w-100 trans-logo" alt="logo">
                 </div>
