--- a/contact-us.html
+++ b/contact-us.html
@@ -13,6 +13,10 @@
     <!-- my style -->
     <link rel="stylesheet" href="css/style.css">
     <style>
+        iframe{
+            width: 64% !important;
+            height: 300px !important;
+        }
         .singleContactHolder{margin-top: 5%;}
         .singleContactHolder h2{color: #0B5355;font-size: 45px; word-spacing: 8px;}
         .sub-btn2{margin-top: 10%;color: #0B5355;}
