--- a/quote.html
+++ b/quote.html
@@ -87,7 +87,7 @@
         </p>
         <div class="blog-hedline d-flex justify-content-between pe-2 ">
             <h2>GET  A  QUOTE</h2>
-            <p class="w-50">Looking for the best value? Fill in the form and receive a quote that matches your budget</p>
+            <p style="width: 42%; padding-right: 10%;">Looking for the best value? Fill in the form and receive a quote that matches your budget</p>
         </div>
 
         <form class="row g-3">
