--- a/translate.html
+++ b/translate.html
@@ -88,7 +88,7 @@
         </p>
         <div class="blog-hedline d-flex justify-content-between pe-2 ">
             <h2>TRANSLATE</h2>
-            <p class="w-50">Don't let language be a barrier – Take your content global with our reliable and accurate translation solutions.</p>
+            <p style="width: 42%;">Don't let language be a barrier – Take your content global with our reliable and accurate translation solutions.</p>
         </div>
 
         <div>
@@ -167,7 +167,7 @@
     <!-- contact -->
     <div class="container expHolder mt-5">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-7">
                 <div class="exp-content">
                     <h2 class="mb-3">Take the first step <br> towards your solution</h2>
                     <p class="mb-5">Discover affordable solutions for your project - request a quote by filling out our form.</p>
@@ -177,7 +177,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 me-0">
+            <div class="col-md-5 me-0">
                 <div>
                     <img src="images/Group 48.png" class="w-100 trans-logo" alt="logo">
                 </div>
