--- a/freelancer.html
+++ b/freelancer.html
@@ -62,10 +62,7 @@
             z-index: 1002;
             left: 70px;
         }
-        .arrow-circle{
-            width: 28px;
-            height: 30px;
-        }
+
         .my-ms{margin-left: 15% !important;}
         .blog-footer{border-top: 2px solid #0b5255ad; }
         .single-job{   
@@ -76,7 +73,7 @@
         }
         .single-service:hover .servic-content .job-desc{color: #000 !important;}
         .single-service:hover .servic-content .job-name{color: #0B5355 !important;}
-        .single-service:hover .fa-arrow-right{color: #0B5355 !important;font-size: 38px ;}
+        .single-service:hover .fa-arrow-right{color: #0B5355 !important;}
         .single-service:hover .arrow-circle {opacity: .8;}
 
         .job-desc{width: 80%; font-size: 19px;}
