--- a/About-us.html
+++ b/About-us.html
@@ -133,21 +133,21 @@
                         <div class="row nums">
                             <div class="col-sm-3 ">
                                 <div class="num text-center">
-                                    <p class="mb-0 h1"><span class="number" data-goal="20">0</span>+</p>
+                                    <p class="mb-0 h1 numnumbr"><span class="number" data-goal="20">0</span>+</p>
                                     <p class="num-desc">Translated <br> Words</p>
                                 </div>
                             </div>
                             <div class="col-sm-1 "></div>
                             <div class="col-sm-3 ">
                                 <div class="num text-center">
-                                    <p class="mb-0 h1"><span class="number" data-goal="30">0</span>+</p>
+                                    <p class="mb-0 h1 numnumbr"><span class="number" data-goal="30">0</span>+</p>
                                     <p class="num-desc">Translation<br> Experience</p>
                                 </div>
                             </div>
                             <div class="col-sm-1 "></div>
                             <div class="col-sm-3 ">
                                 <div class="num text-center">
-                                    <p class="mb-0 h1"><span class="number" data-goal="30">0</span>+</p>
+                                    <p class="mb-0 h1 numnumbr"><span class="number" data-goal="30">0</span>+</p>
                                     <p class="num-desc">Professional<br> Translators</p>
                                 </div>
                             </div>
