--- a/index.html
+++ b/index.html
@@ -184,21 +184,21 @@
                         <div class="row nums">
                             <div class="col-sm-3 ">
                                 <div class="num text-center">
-                                    <p class="mb-0 h1"><span class="number" data-goal="20">0</span>+</p>
+                                    <p class="mb-0 h1 numnumbr"><span class="number" data-goal="20">0</span>+</p>
                                     <p class="num-desc">Translated <br> Words</p>
                                 </div>
                             </div>
                             <div class="col-sm-1 "></div>
                             <div class="col-sm-3 ">
                                 <div class="num text-center">
-                                    <p class="mb-0 h1"><span class="number" data-goal="30">0</span>+</p>
+                                    <p class="mb-0 h1 numnumbr"><span class="number" data-goal="30">0</span>+</p>
                                     <p class="num-desc">Translation<br> Experience</p>
                                 </div>
                             </div>
                             <div class="col-sm-1 "></div>
                             <div class="col-sm-3 ">
                                 <div class="num text-center">
-                                    <p class="mb-0 h1"><span class="number" data-goal="30">0</span>+</p>
+                                    <p class="mb-0 h1 numnumbr"><span class="number" data-goal="30">0</span>+</p>
                                     <p class="num-desc">Professional<br> Translators</p>
                                 </div>
                             </div>
@@ -208,10 +208,11 @@
                 </div>
             </div>
         </div>
+            <!-- hamesh2 -->
+        <img src="images/Path 59.png" class="hamesh2"  alt="as">
     </div>
 
-    <!-- hamesh2 -->
-    <img src="images/Path 59.png" class="hamesh2"  alt="as">
+
 
     <!-- Services -->
     <div class="container serviceHolder">
@@ -726,7 +727,7 @@
 
     <!-- Testimonials -->
     <div class="container tetimonialHolder">
-        <h2>CLIENTS Testimonials</h2>
+        <h2>CLIENTS TESTIMONIALS</h2>
         <div>
             <!-- Big screen slider -->
             <div id="slider1" class="splide big-slid" aria-label="Splide Basic HTML Example">
@@ -911,7 +912,7 @@
                         <p>E-mail: translate@mutarjimoon.com</p>
                         <p class="mb-5">Location: 42 Fareek Awal Ali Amer St., Makram Ebeid St.,<br> 6th District, Nasr City, Cairo Arab Republic of Egypt</p>
                         <div style="width: 80%;">
-                            <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3453.119002298354!2d31.34396400000001!3d30.0621232!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14583f275663064d%3A0x5b787cc80d483dc0!2zTXV0YXJqaW1vb24gVHJhbnNsYXRpb24gU2VydmljZXMg2YXYqtix2KzZhdmI2YYg2YTYrtiv2YXYp9iqINin2YTYqtix2KzZhdip!5e0!3m2!1sar!2seg!4v1693660204502!5m2!1sar!2seg" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe class="mapFrameHome"  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3453.119002298354!2d31.34396400000001!3d30.0621232!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14583f275663064d%3A0x5b787cc80d483dc0!2zTXV0YXJqaW1vb24gVHJhbnNsYXRpb24gU2VydmljZXMg2YXYqtix2KzZhdmI2YYg2YTYrtiv2YXYp9iqINin2YTYqtix2KzZhdip!5e0!3m2!1sar!2seg!4v1693660204502!5m2!1sar!2seg" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
