--- a/About-us.html
+++ b/About-us.html
@@ -27,6 +27,14 @@
             transform: scale(1.4);
             z-index: 1;
         }
+        @media (max-width: 767px) {
+            .exp-content {
+                padding: 20% 10px 20% 7%;
+                left: 0 !important;
+            }
+            .exp-content p{
+            width: 84%;
+        }}
     </style>
     
 </head>
