--- a/services.html
+++ b/services.html
@@ -117,7 +117,7 @@
                     <img src="images/service-demo.jpg" class="w-100 h-100 service-img" alt="service">
                     <div class="service-layout"></div>
                     <div class="servic-content">
-                        <p class="service-desc">Localization is simply explaining to your client/customer their need for your product...</p>
+                        <p class="service-desc">Converts visual or audio content into a written one. Its benefits are...</p>
                         <p class="service-name">Localization  
                             <span>
                                 <a href="service-details.html" class="service-icon">
@@ -137,7 +137,7 @@
                     <img src="images/demo2.jpg" class="w-100 h-100 service-img" alt="service">
                     <div class="service-layout"></div>
                     <div class="servic-content">
-                        <p class="service-desc">We translate from and into 16 languages, depending on our team of professional....</p>
+                        <p class="service-desc">Converts visual or audio content into a written one. Its benefits are...</p>
                         <p class="service-name">Translation  
                             <span>
                                 <a href="" class="service-icon">
@@ -177,7 +177,7 @@
                     <img src="images/demo2.jpg" class="w-100 h-100 service-img" alt="service">
                     <div class="service-layout"></div>
                     <div class="servic-content">
-                        <p class="service-desc" >That's why voice-over requires high quality, clarity, and tones that suit each...</p>
+                        <p class="service-desc" >Converts visual or audio content into a written one. Its benefits are...</p>
                         <p class="service-name">Voice Over
                             <span>
                                 <a href="" class="service-icon">
@@ -197,7 +197,7 @@
                     <img src="images/service-demo.jpg" class="w-100 h-100 service-img" alt="service">
                     <div class="service-layout"></div>
                     <div class="servic-content">
-                        <p class="service-desc" >We have always believed that meanings are way stronger than words...</p>
+                        <p class="service-desc" >Converts visual or audio content into a written one. Its benefits are...</p>
                         <p class="service-name">Content Writing
                             <span>
                                 <a href="" class="service-icon">
@@ -217,7 +217,7 @@
                     <img src="images/service-demo.jpg" class="w-100 h-100 service-img" alt="service">
                     <div class="service-layout"></div>
                     <div class="servic-content">
-                        <p class="service-desc">Mutarjimoon surpasses traditional design agencies by providing solutions of lang...</p>
+                        <p class="service-desc">Converts visual or audio content into a written one. Its benefits are...</p>
                         <p class="service-name">Design
                             <span style="display: block;">
                                 <a href="" class="service-icon">
@@ -237,7 +237,7 @@
                     <img src="images/service-demo.jpg" class="w-100 h-100 service-img" alt="service">
                     <div class="service-layout"></div>
                     <div class="servic-content">
-                        <p class="service-desc">We make sure that the work meets the translation standards according to 3 levels..</p>
+                        <p class="service-desc">Converts visual or audio content into a written one. Its benefits are...</p>
                         <p class="service-name">Proofreading
                             <span style="display: block;">
                                 <a href="" class="service-icon">
@@ -256,7 +256,7 @@
                     <img src="images/service-demo.jpg" class="w-100 h-100 service-img" alt="service">
                     <div class="service-layout"></div>
                     <div class="servic-content">
-                        <p class="service-desc">These are mechanisms for explaining visual content with specific considerations....</p>
+                        <p class="service-desc">Converts visual or audio content into a written one. Its benefits are...</p>
                         <p class="service-name">Dubbing and Subtitling
                             <span style="display: block;">
                                 <a href="" class="service-icon">
