--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     <img src="images/service-demo.jpg" class="w-100 h-100 service-img" alt="service">
                     <div class="service-layout"></div>
                     <div class="servic-content">
-                        <p class="service-desc">Localization is simply explaining to your client/customer their need for your product...</p>
+                        <p class="service-desc">Converts visual or audio content into a written one. Its benefits are...</p>
                         <p class="service-name">Localization  
                             <span>
                                 <a href="service-details.html" class="service-icon">
@@ -244,7 +244,7 @@
                     <img src="images/demo2.jpg" class="w-100 h-100 service-img" alt="service">
                     <div class="service-layout"></div>
                     <div class="servic-content">
-                        <p class="service-desc">We translate from and into 16 languages, depending on our team of professional....</p>
+                        <p class="service-desc">Converts visual or audio content into a written one. Its benefits are...</p>
                         <p class="service-name">Translation  
                             <span>
                                 <a href="" class="service-icon">
@@ -284,7 +284,9 @@
                     <img src="images/demo2.jpg" class="w-100 h-100 service-img" alt="service">
                     <div class="service-layout"></div>
                     <div class="servic-content">
-                        <p class="service-desc" >That's why voice-over requires high quality, clarity, and tones that suit each...</p>
+                        <p class="service-desc" >Converts visual or audio content into a written one. Its benefits are...
+
+                        </p>
                         <p class="service-name">Voice Over
                             <span>
                                 <a href="" class="service-icon">
@@ -304,7 +306,7 @@
                     <img src="images/service-demo.jpg" class="w-100 h-100 service-img" alt="service">
                     <div class="service-layout"></div>
                     <div class="servic-content">
-                        <p class="service-desc" >We have always believed that meanings are way stronger than words...</p>
+                        <p class="service-desc" >Converts visual or audio content into a written one. Its benefits are...</p>
                         <p class="service-name">Content Writing
                             <span>
                                 <a href="" class="service-icon">
@@ -324,7 +326,7 @@
                     <img src="images/service-demo.jpg" class="w-100 h-100 service-img" alt="service">
                     <div class="service-layout"></div>
                     <div class="servic-content">
-                        <p class="service-desc">Mutarjimoon surpasses traditional design agencies by providing solutions of lang...</p>
+                        <p class="service-desc">Converts visual or audio content into a written one. Its benefits are...</p>
                         <p class="service-name">Design
                             <span style="display: block;">
                                 <a href="" class="service-icon">
