--- a/service-details.html
+++ b/service-details.html
@@ -160,7 +160,7 @@
                     <img src="images/demo2.jpg" class="w-100 h-100 service-img" alt="service">
                     <div class="service-layout"></div>
                     <div class="servic-content">
-                        <p class="service-desc" >That's why voice-over requires high quality, clarity, and tones that suit each...</p>
+                        <p class="service-desc" >Converts visual or audio content into a written one. Its benefits are...</p>
                         <p class="service-name">Voice Over
                             <span>
                                 <a href="" class="service-icon">
@@ -180,7 +180,7 @@
                     <img src="images/service-demo.jpg" class="w-100 h-100 service-img" alt="service">
                     <div class="service-layout"></div>
                     <div class="servic-content">
-                        <p class="service-desc" >We have always believed that meanings are way stronger than words...</p>
+                        <p class="service-desc" >Converts visual or audio content into a written one. Its benefits are...</p>
                         <p class="service-name">Content Writing
                             <span>
                                 <a href="" class="service-icon">
@@ -200,7 +200,7 @@
                     <img src="images/service-demo.jpg" class="w-100 h-100 service-img" alt="service">
                     <div class="service-layout"></div>
                     <div class="servic-content">
-                        <p class="service-desc">Mutarjimoon surpasses traditional design agencies by providing solutions of lang...</p>
+                        <p class="service-desc">Converts visual or audio content into a written one. Its benefits are...</p>
                         <p class="service-name">Design
                             <span style="display: block;">
                                 <a href="" class="service-icon">
